--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,15 @@ jobs:
           sendy-user-producer
         ]
     steps:
+      - uses: actions/checkout@v4
+
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: |
+          mkdir -p ${{ matrix.module }}/src/main/resources
+          echo "$APPLICATION_SECRET" > ${{ matrix.module }}/src/main/resources/application-secret.yml
+
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
 
@@ -69,8 +78,8 @@ jobs:
       - name: 빌드 앤 푸시
         uses: docker/build-push-action@v3
         with:
-          context: ./${{ matrix.module }}
-          file: Dockerfile
+          context: .
+          file: ./${{ matrix.module }}/Dockerfile
           push: true
           tags: |
             ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:${{ needs.makeTagAndRelease.outputs.tag_name }}
@@ -86,6 +95,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: 설정 파일 생성
+        env:
+          DOCKER_COMPOSE_PROD_SPRING: ${{ secrets.DOCKER_COMPOSE_PROD_SPRING_YML }}
+        run: |
+          mkdir -p docker-compose
+          echo "$DOCKER_COMPOSE_PROD_SPRING" > docker-compose/docker-compose.prod.spring.yml
+
       - name: secrets EC2로 전송
         uses: appleboy/scp-action@master
         with:
@@ -93,9 +109,14 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: |
-            docker-compose/docker-compose.prod.spring.yml
-            docker-compose/mysql/cnf/**
-            docker-compose/mysql/initdb.d/**
+            docker-compose/docker-compose.prod.spring.yml,
+            sendy-legacy-api/src/main/resources/application-secret.yml,
+            sendy-notification-consumer/src/main/resources/application-secret.yml,
+            sendy-shared-mongo/src/main/resources/application-secret.yml,
+            sendy-shared-kafka/src/main/resources/application-secret.yml,
+            sendy-transfer-consumer/src/main/resources/application-secret.yml,
+            sendy-transfer-producer/src/main/resources/application-secret.yml,
+            sendy-user-producer/src/main/resources/application-secret.yml
           target: "/home/ec2-user/"
 
       - name: 스프링 배포
@@ -105,10 +126,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/ec2-user
             echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ env.OWNER_LC }} --password-stdin
             docker-compose -f docker-compose/docker-compose.prod.spring.yml down --remove-orphans
-            docker-compose -f docker-compose/docker-compose.prod.spring.yml pull
-            docker-compose -f docker-compose/docker-compose.prod.spring.yml up -d --remove-orphans
+            docker-compose -f docker-compose/docker-compose.prod.spring.yml up --build -d
             docker system prune -f
     
