--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,28 @@
+# .github/workflows/deploy.yml 
+
 name: deploy.yml
 on:
+  #  어플리케이션 구동에 필요한 경로들 취득 
   push:
     paths:
       - ".github/workflows/**"
-      - "*/src/**"
+      - "src/**"
       - "build.gradle"
       - "settings.gradle.kts"
-      - "*/Dockerfile"
+      - "Dockerfile"
+    
+    #  배포대상이 될 브런치 명시 
     branches:
-      - develop
-
+      - main
 permissions:
   contents: write
   packages: write
-
 jobs:
   makeTagAndRelease:
+    #  구동 환경 설정 
     runs-on: ubuntu-latest
     outputs:
+      #  이미지에 태그 설정 
       tag_name: ${{ steps.create_tag.outputs.new_tag }}
     steps:
       - uses: actions/checkout@v4
@@ -27,6 +32,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -37,97 +43,111 @@ jobs:
           draft: false
           prerelease: false
 
+  #  이 단계에서 build한 파일들을 컨테이너에 담아, Docker Hub에 적재 
   buildImageAndPush:
     name: 도커 이미지 빌드와 푸시
     needs: makeTagAndRelease
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: [
-          sendy-legacy-api,
-          sendy-notification-consumer,
-          sendy-transfer-consumer,
-          sendy-transfer-producer,
-          sendy-user-producer
-        ]
+    env:
+      #  docker에 적재 될 이미지 명 환경변수화  
+      DOCKER_IMAGE_NAME: sendy
+    outputs:
+      DOCKER_IMAGE_NAME: ${{ env.DOCKER_IMAGE_NAME }}
+      OWNER_LC: ${{ env.OWNER_LC }}
     steps:
       - uses: actions/checkout@v4
-
       - name: application-secret.yml 생성
         env:
           APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
         run: |
-          mkdir -p ${{ matrix.module }}/src/main/resources
-          echo "$APPLICATION_SECRET" > ${{ matrix.module }}/src/main/resources/application-secret.yml
-
+          echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
-
       - name: 레지스트리 로그인
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: set lower case owner name
-        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >> ${GITHUB_ENV}
         env:
-          OWNER: ${{ github.repository_owner }}
-
+          OWNER: "${{ github.repository_owner }}"
       - name: 빌드 앤 푸시
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./${{ matrix.module }}/Dockerfile
           push: true
+          cache-from: type=registry,ref=ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:cache
+          cache-to: type=registry,ref=ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:cache,mode=max
           tags: |
-            ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:${{ needs.makeTagAndRelease.outputs.tag_name }}
-            ghcr.io/${{ env.OWNER_LC }}/${{ matrix.module }}:latest
+            ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:${{ needs.makeTagAndRelease.outputs.tag_name }},
+            ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:latest
 
+  #  이 단계에서 Docker Hub에 적재한 이미지를 application 서버에 가져와서 구동 
   deploy:
+    #  구동 환경 지정 
     runs-on: ubuntu-latest
     needs: [ buildImageAndPush ]
+    env:
+      DOCKER_IMAGE_NAME: ${{ needs.buildImageAndPush.outputs.DOCKER_IMAGE_NAME }}
+      OWNER_LC: ${{ needs.buildImageAndPush.outputs.OWNER_LC }}
     steps:
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: 인스턴스 ID 가져오기
+        id: get_instance_id
+        run: |
+          INSTANCE_ID=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=Team01-api-server" "Name=instance-state-name,Values=running" --query "Reservations[].Instances[].InstanceId" --output text)
+          echo "INSTANCE_ID=$INSTANCE_ID" >> $GITHUB_ENV
+          echo $INSTANCE_ID
 
       - name: 설정 파일 생성
         env:
           DOCKER_COMPOSE_PROD_SPRING: ${{ secrets.DOCKER_COMPOSE_PROD_SPRING_YML }}
         run: |
-          mkdir -p docker-compose
+          mkdir -p docker-compose 
           echo "$DOCKER_COMPOSE_PROD_SPRING" > docker-compose/docker-compose.prod.spring.yml
 
-      - name: secrets EC2로 전송
+      - name: 설정 파일 EC2로 전송
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SPRING_EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: |
-            docker-compose/docker-compose.prod.spring.yml,
-            sendy-legacy-api/src/main/resources/application-secret.yml,
-            sendy-notification-consumer/src/main/resources/application-secret.yml,
-            sendy-shared-mongo/src/main/resources/application-secret.yml,
-            sendy-shared-kafka/src/main/resources/application-secret.yml,
-            sendy-transfer-consumer/src/main/resources/application-secret.yml,
-            sendy-transfer-producer/src/main/resources/application-secret.yml,
-            sendy-user-producer/src/main/resources/application-secret.yml
+          source: "docker-compose/docker-compose.prod.spring.yml,src/main/resources/application-secret.yml"
           target: "/home/ec2-user/"
 
       - name: 스프링 배포
         uses: appleboy/ssh-action@master
+        env:
+          GHCR_USER: ${{ secrets.GHCR_USER }}
+          GHCR_PAT: ${{ secrets.GHCR_PAT }}
+          OWNER_LC: ${{ env.OWNER_LC }}
+          DOCKER_IMAGE_NAME: ${{ env.DOCKER_IMAGE_NAME }}
         with:
           host: ${{ secrets.SPRING_EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          envs: GHCR_USER,GHCR_PAT,OWNER_LC,DOCKER_IMAGE_NAME
           script: |
-            echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ env.OWNER_LC }} --password-stdin
-            docker-compose -f docker-compose/docker-compose.prod.spring.yml down --remove-orphans
-            docker-compose -f docker-compose/docker-compose.prod.spring.yml up --build -d
+            # Docker 로그인 (Personal Access Token 사용)
+            echo "$GHCR_PAT" | docker login ghcr.io -u "$GHCR_USER" --password-stdin
+            
+            # 최신 이미지 pull
+            docker pull ghcr.io/$OWNER_LC/$DOCKER_IMAGE_NAME:latest
+            
+            # 환경변수 파일 생성
+            echo "OWNER_LC=$OWNER_LC" > .env
+            echo "DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME" >> .env
+            
+            # 기존 컨테이너 중지 및 새 컨테이너 시작
+            docker compose -f docker-compose/docker-compose.prod.spring.yml down
+            docker compose -f docker-compose/docker-compose.prod.spring.yml up -d
+            
+            # 사용하지 않는 Docker 리소스 정리
             docker system prune -f
-    
